--- a/backend1/package.json
+++ b/backend1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "db.js",
@@ -12,11 +12,9 @@
   "dependencies": {
     "Router": "^2.1.0",
     "bcrypt": "^5.0.1",
-    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-await": "^1.1.0",
-    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.1",
     "nodemon": "^2.0.15",
     "router": "^1.3.6"
